trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 284
    df = calculate_indicators(df)
    ^^
SyntaxError: expected 'except' or 'finally' block
